--- a/map.html
+++ b/map.html
@@ -3,33 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>Web-bee Intern</title>
   </head>
   <body>
-    <header class="header">
-      <img src="assets/back-icon.svg" alt="back-arrow icon" />
-      <b>User Pages </b>- Profile
+    <header class="header d-flex align-items-center w-100 gap-2">
+      <img src="assets/back-icon.svg" alt="back-arrow icon" class="mr-2" />
+      <b>User Pages</b>- Profile
     </header>
-    <nav class="nav-bar">
-      <a href="index.html" class="nav">
+    <nav class="nav-bar w-100 d-flex">
+      <a href="index.html" class="nav gap-2 d-flex align-items-center">
         <img src="assets/activity-icon.svg" alt="activity icon" />
         Activity
       </a>
-      <a href="#" class="nav current">
+      <a href="#" class="nav current gap-2 d-flex align-items-center">
         <img src="assets/map-icon.svg" alt="map icon" />
         Map
       </a>
-      <a href="timer.html" class="nav">
+      <a href="timer.html" class="nav gap-2 d-flex align-items-center">
         <img src="assets/time-icon.svg" alt="time icon" />
         Time
       </a>
     </nav>
+    <div class="main-wrapper container-fluid">
+      <main class="map-wrapper mx-auto">
+        <div
+          class="map-header d-flex justify-content-between align-items-center"
+        >
+          <div class="map-title">Basic map</div>
+          <img src="assets/map-icons.svg" alt="" class="map-icons" />
+        </div>
+        <div
+          class="loader-container d-flex justify-content-center align-items-center"
+        >
+          <img src="assets/loader.png" id="loader" class="loader" />
+        </div>
+
+        <div id="map" class="map w-100"></div>
+      </main>
+    </div>
+    <!-- Yandex Maps API -->
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=c44df0a4-9884-4e88-9236-f09e8d5ef291&lang=ru_RU"
+      type="text/javascript"
+    ></script>
+    <script src="map.js" type="text/javascript"></script>
   </body>
 </html>
