--- a/timer.html
+++ b/timer.html
@@ -1,35 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Web-bee Intern</title>
-  </head>
-  <body>
-    <header class="header d-flex align-items-center w-100 gap-2">
-      <img src="assets/back-icon.svg" alt="back-arrow icon" class="mr-2" />
-      <b>User Pages</b>- Profile
-    </header>
-    <nav class="nav-bar w-100 d-flex">
-      <a href="index.html" class="nav gap-2 d-flex align-items-center">
-        <img src="assets/activity-icon.svg" alt="activity icon" />
-        Activity
-      </a>
-      <a href="map.html" class="nav gap-2 d-flex align-items-center">
-        <img src="assets/map-icon.svg" alt="map icon" />
-        Map
-      </a>
-      <a href="#" class="nav current gap-2 d-flex align-items-center">
-        <img src="assets/time-icon.svg" alt="time icon" />
-        Time
-      </a>
-    </nav>
-  </body>
-</html>
+<div class="main-wrapper container-fluid">
+  <main class="map-wrapper mx-auto">
+    <div class="map-header d-flex justify-content-between align-items-center">
+      <div class="map-title">Timer</div>
+      <img src="assets/map-icons.svg" alt="" class="map-icons" />
+    </div>
+    <div class="timer"></div>
+  </main>
+</div>
